--- a/site/entry.html
+++ b/site/entry.html
@@ -4,170 +4,243 @@
   <meta charset="utf-8" />
   <title>Entry</title>
   <link rel="stylesheet" href="styles.css" />
-  <style>
-    :root { --pad: 12px; }
-    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
-    a { text-decoration: none; }
+  <!-- PDBe Mol* (pinned) -->
+  <script src="https://unpkg.com/pdbe-molstar@3.7.1/build/pdbe-molstar-plugin.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/pdbe-molstar@3.7.1/build/pdbe-molstar-light.css" />
 
-    .bar { padding: 10px var(--pad); }
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 16px;
-      padding: 0 var(--pad) 16px;
+  <style>
+    :root { --gap: 12px; --card-border: #ddd; }
+    html, body { height: 100%; margin: 0; background: #fff; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
+
+    /* Header */
+    .topbar { display: flex; align-items: center; gap: 12px; padding: 12px 16px; border-bottom: 1px solid var(--card-border); }
+    .topbar a { text-decoration: none; }
+    .title { font-size: 20px; font-weight: 600; margin: 0; }
+
+    /* 2-column layout */
+    .main {
+      height: calc(100vh - 54px); /* header height allowance */
+      display: flex;
+      gap: var(--gap);
+      padding: var(--gap);
+      box-sizing: border-box;
     }
-    .card {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      background: #fff;
-      overflow: hidden;
+    .col {
+      flex: 1 1 50%;
+      min-width: 0; /* allow content to shrink */
       display: flex;
       flex-direction: column;
-      min-height: 300px;
-    }
-    .card h3 {
-      margin: 0;
-      padding: 10px 12px;
-      border-bottom: 1px solid #eee;
-      background: #fafafa;
-      font-size: 15px;
-    }
-
-    /* Left viewer box */
-    #viewer-wrap { position: relative; height: 640px; }
-    #viewer-frame { position:absolute; inset:0; width:100%; height:100%; border:0; display:block; }
-
-    /* Right sequence panel */
-    #seq-panel { display:flex; flex-direction:column; height:640px; }
-    #seq-toolbar {
-      display:flex; align-items:center; gap:8px;
-      padding:8px 12px; border-bottom:1px solid #eee; background:#fafafa;
-    }
-    .btn { padding:6px 10px; border:1px solid #ddd; border-radius:6px; cursor:pointer; background:#fff; }
-    .btn:disabled { opacity:.6; cursor:not-allowed; }
-
-    /* Sequence box (static) */
-    #seq-box {
-      padding: 12px;
-      overflow: auto;
-      font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
-      font-size: 13px;
-      line-height: 1.65;
-      white-space: pre-wrap;
-      word-break: break-word;
+      border: 1px solid var(--card-border);
+      border-radius: 8px;
+      overflow: hidden;
       background: #fff;
-      flex: 1;
     }
 
-    /* Optional soft line-number “ruler” every 10 residues (CSS-only visual aid) */
-    .chunk-10 { color:#6b7280; }  /* muted gray for separators */
+    /* Left: Mol* viewer fills column */
+    #viewer-wrap { position: relative; flex: 1 1 auto; }
+    #viewer { position: absolute; inset: 0; }
+    /* Ensure the canvas always fills */
+    #viewer .msp-viewport, #viewer canvas {
+      width: 100% !important;
+      height: 100% !important;
+      max-width: 100% !important;
+      max-height: 100% !important;
+    }
 
-    .links { display:flex; gap:12px; align-items:center; margin: 6px var(--pad) 16px; }
-    .error { color:#b00020; margin: 8px var(--pad) 0; }
+    /* Hide Mol* UI chrome to keep a clean canvas */
+    .msp-left-panel,.msp-right-panel,.msp-bottom-panel,
+    .msp-layout-controls,.msp-viewport-controls,
+    .msp-plugin-ui,.msp-controls,.msp-controls-wrapper,.msp-help-toast {
+      display: none !important;
+      visibility: hidden !important;
+      pointer-events: none !important;
+    }
+
+    /* Right: sequence panel */
+    .seq-header {
+      display: flex; align-items: center; gap: 12px;
+      padding: 10px 12px; border-bottom: 1px solid var(--card-border);
+      background: #fafafa;
+      flex-wrap: wrap;
+    }
+    .seq-header strong { margin-right: 4px; }
+    .seq-header a { text-decoration: none; }
+    .btn {
+      padding: 6px 10px; border: 1px solid var(--card-border); border-radius: 6px; cursor: pointer; background: #fff;
+    }
+    .seq-body {
+      flex: 1 1 auto;
+      overflow: auto;
+      padding: 12px;
+    }
+    pre { margin: 0; white-space: pre-wrap; word-break: break-word; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; }
+
+    /* Error banner */
+    .error { color: #b00020; padding: 8px 12px; border-top: 1px solid var(--card-border); background: #fff7f7; }
   </style>
 </head>
 <body>
-  <div class="bar"><a href="index.html">← Back</a></div>
-  <div class="bar"><h1 id="title" style="margin:0"></h1></div>
+  <div class="topbar">
+    <a href="index.html">← Back</a>
+    <h1 id="title" class="title"></h1>
+  </div>
 
-  <div class="grid">
-    <!-- Left: Mol* (hosted, minimal) -->
-    <div class="card">
-      <h3>Structure</h3>
+  <div class="main">
+    <!-- Left: Mol* viewer -->
+    <div class="col">
       <div id="viewer-wrap">
-        <iframe id="viewer-frame" src="about:blank" title="Mol* Viewer (minimal)"></iframe>
+        <div id="viewer"></div>
       </div>
+      <div id="viewer-error" class="error" style="display:none;"></div>
     </div>
 
-    <!-- Right: FASTA (static) -->
-    <div class="card">
-      <h3>Sequence</h3>
-      <div id="seq-panel">
-        <div id="seq-toolbar">
-          <button id="copyBtn" class="btn" type="button">Copy FASTA</button>
-        </div>
-        <pre id="seq-box">Loading…</pre>
+    <!-- Right: sequence + links -->
+    <div class="col">
+      <div class="seq-header">
+        <strong>Files:</strong>
+        <a id="cifLink"   target="_blank" rel="noopener">CIF</a>
+        <a id="fastaLink" target="_blank" rel="noopener">FASTA</a>
+        <button id="copyBtn" class="btn" type="button">Copy FASTA</button>
       </div>
+      <div class="seq-body">
+        <pre id="fasta">Loading...</pre>
+      </div>
+      <div id="seq-error" class="error" style="display:none;"></div>
     </div>
   </div>
-
-  <div class="links">
-    <strong>Files:</strong>
-    <a id="cifLink"   target="_blank" rel="noopener">CIF</a>
-    <a id="fastaLink" target="_blank" rel="noopener">FASTA</a>
-  </div>
-
-  <div id="err" class="error"></div>
 
   <script>
-    const getParam = name => new URL(location.href).searchParams.get(name);
+    function getParam(name){ return new URL(location.href).searchParams.get(name); }
 
-    // split sequence into blocks of 10 and 50 for easier reading (purely visual)
-    function formatSequence(seq) {
-      const out = [];
-      for (let i = 0; i < seq.length; i++) {
-        out.push(seq[i]);
-        const at = i + 1;
-        if (at % 10 === 0) out.push('<span class="chunk-10"> </span>');
-        if (at % 50 === 0) out.push('\n');
-      }
-      return out.join('').replace(/\n+$/,'');
-    }
-
-    async function load() {
-      const uid       = getParam('uid');
-      const errEl     = document.getElementById('err');
-      const titleEl   = document.getElementById('title');
-      const seqBox    = document.getElementById('seq-box');
-      const cifLink   = document.getElementById('cifLink');
+    async function load(){
+      const uid = getParam('uid');
+      const titleEl = document.getElementById('title');
+      const fastaEl = document.getElementById('fasta');
+      const copyBtn = document.getElementById('copyBtn');
+      const cifLink = document.getElementById('cifLink');
       const fastaLink = document.getElementById('fastaLink');
-      const frame     = document.getElementById('viewer-frame');
-      const copyBtn   = document.getElementById('copyBtn');
+      const viewerErr = document.getElementById('viewer-error');
+      const seqErr = document.getElementById('seq-error');
 
       titleEl.textContent = uid || '(missing uid)';
 
-      // Load catalog with cache-buster
+      // Load catalog with a cache-buster
       let catalog;
       try {
-        catalog = await fetch('../data/entries.json?v=' + Date.now()).then(r => r.json());
+        catalog = await fetch('../data/entries.json?v=' + Date.now()).then(r=>r.json());
       } catch (e) {
-        errEl.textContent = 'Could not load entries.json.'; return;
+        // Show errors on both sides
+        viewerErr.style.display = 'block';
+        seqErr.style.display = 'block';
+        viewerErr.textContent = 'Could not load entries.json.';
+        seqErr.textContent = 'Could not load entries.json.';
+        return;
       }
 
       const entry = (catalog.entries || []).find(e => e.uniprot_id === uid);
-      if (!entry) { errEl.textContent = 'Entry not found in catalog.'; return; }
+      if(!entry){
+        viewerErr.style.display = 'block';
+        seqErr.style.display = 'block';
+        viewerErr.textContent = 'Entry not found in catalog.';
+        seqErr.textContent = 'Entry not found in catalog.';
+        return;
+      }
 
-      // Wire file links
       const cifUrl   = entry.files.structure_cif;
       const fastaUrl = entry.files.sequence_fasta;
+
+      // Wire file links
       cifLink.href   = cifUrl;
       fastaLink.href = fastaUrl;
 
-      // Show FASTA text (static) + copy
-      let fastaText = '';
+      // ---- Right: FASTA ----
       try {
-        fastaText = await fetch(fastaUrl, { cache: 'no-store' }).then(r => r.text());
-        const seqOnly = fastaText.split(/\r?\n/).filter(l => !l.startsWith('>')).join('').trim();
-        seqBox.innerHTML = formatSequence(seqOnly) || '(no sequence)';
+        const t = await fetch(fastaUrl).then(r=>r.text());
+        fastaEl.textContent = t;
         copyBtn.onclick = async () => {
-          await navigator.clipboard.writeText(fastaText);
-          copyBtn.textContent = 'Copied!';
-          setTimeout(() => copyBtn.textContent = 'Copy FASTA', 1200);
+          try {
+            await navigator.clipboard.writeText(t);
+            const prev = copyBtn.textContent;
+            copyBtn.textContent = 'Copied!';
+            setTimeout(()=> (copyBtn.textContent = prev), 1200);
+          } catch {}
         };
       } catch {
-        seqBox.textContent = 'FASTA not available.';
+        fastaEl.textContent = '';
+        seqErr.style.display = 'block';
+        seqErr.textContent = 'FASTA not available.';
         copyBtn.disabled = true;
       }
 
-      // Build hosted Mol* URL in minimal mode.
-      // Keep params conservative to avoid falling back to the full app UI.
-      const encoded = encodeURIComponent(cifUrl);
-      const viewerUrl =
-        `https://molstar.org/viewer/?structure-url=${encoded}` +
-        `&structure-url-format=mmcif` +
-        `&hide-controls=1`;
+      // ---- Left: PDBe Mol* (direct, no iframe) ----
+      // Decide format from extension; default mmcif
+      const fmt = (cifUrl.toLowerCase().endsWith('.cif') && !cifUrl.toLowerCase().endsWith('.mmcif')) ? 'cif' : 'mmcif';
 
-      frame.src = viewerUrl;
+      let viewer;
+      try {
+        viewer = new PDBeMolstarPlugin();
+      } catch (e) {
+        viewerErr.style.display = 'block';
+        viewerErr.textContent = 'Failed to create PDBe Mol* plugin.';
+        return;
+      }
+
+      // Minimal, robust options
+      const options = {
+        customData: { url: cifUrl, format: fmt },
+        hideControls: true,          // hide UI chrome
+        expanded: false,             // keep compact layout
+        bgColor: { r:255, g:255, b:255 } // white background
+        // You can add: visualStyle: 'cartoon'  // PDBe option; defaults are good
+      };
+
+      try {
+        viewer.render('viewer', options);
+      } catch (e) {
+        viewerErr.style.display = 'block';
+        viewerErr.textContent = 'Mol* render error.';
+        return;
+      }
+
+      // Defensive: if PDBe injects controls later, hide again
+      const root = document.getElementById('viewer');
+      const hideChrome = () => {
+        [
+          '.msp-left-panel','.msp-right-panel','.msp-bottom-panel',
+          '.msp-layout-controls','.msp-viewport-controls',
+          '.msp-plugin-ui','.msp-controls','.msp-controls-wrapper','.msp-help-toast'
+        ].forEach(sel => {
+          document.querySelectorAll(sel).forEach(el => {
+            el.style.display='none'; el.style.visibility='hidden'; el.style.pointerEvents='none';
+          });
+        });
+      };
+      hideChrome(); setTimeout(hideChrome, 100); setTimeout(hideChrome, 500);
+      new MutationObserver(hideChrome).observe(root, { childList:true, subtree:true });
+
+      // (Optional) Best-effort: mild ambient light + outline + uniform color
+      // Safe to leave in; if unsupported in this build, it’s ignored.
+      function styleScene() {
+        try {
+          const plugin = viewer?.viewerInstance?.plugin;
+          const c3d = plugin?.canvas3d;
+          if (c3d?.setProps) {
+            c3d.setProps({
+              renderer: { ambientIntensity: 0.6 }, // “soft” feel
+              postprocessing: { outline: { enable: true, scale: 1.0, threshold: 0.8 } }
+            });
+          }
+          // Uniform color (steel blue) if accessible
+          const reps = plugin?.managers?.structure?.representation?.componentReprs || [];
+          const val = { r: 70/255, g: 130/255, b: 180/255 };
+          reps.forEach(cr => {
+            try { cr.setTheme?.({ color: { name: 'uniform', params: { value: val } } }); } catch {}
+          });
+        } catch {}
+      }
+      setTimeout(styleScene, 400);
+      setTimeout(styleScene, 1200);
     }
 
     load();
