--- a/site/entry.html
+++ b/site/entry.html
@@ -55,15 +55,18 @@
     .error { color: #b00020; padding: 8px 12px; border-top: 1px solid var(--card-border); background: #fff7f7; }
 
     /* Interactive sequence strip */
-    .seq-strip { font: 13px/1.5 ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; }
+    .seq-strip { font: 13px/1.5 ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; user-select: none; }
     .seq-chain { margin-bottom: 10px; }
     .seq-chain h4 { margin: 8px 0 6px; font: 600 13px/1.3 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
+    .seq-row { display: flex; flex-wrap: wrap; align-items: center; }
     .seq-res {
       display: inline-block; padding: 2px 3px; margin: 0 1px 1px 0;
-      border-radius: 3px; cursor: pointer; user-select: none;
+      border-radius: 3px; cursor: pointer;
     }
     .seq-res:hover { background:#eef6ff; }
     .seq-res.active { background:#cfe8ff; outline: 1px solid #8bbcff; }
+    .seq-res.sel { background:#bad7ff; outline: 1px solid #7fb0ff; }
+    .seq-res.drag { background:#dfeeff; outline: 1px dashed #9ac3ff; }
 
     .muted { color:#666; font-size:12px; margin: 6px 0 0; }
   </style>
@@ -91,9 +94,7 @@
         <a id="fastaLink" target="_blank" rel="noopener">FASTA</a>
         <button id="copyBtn" class="btn" type="button">Copy FASTA</button>
       </div>
-      <div class="seq-body" id="seq-body">
-        <!-- We will inject the interactive strip here (FASTA first, then upgrade to structure-derived). -->
-      </div>
+      <div class="seq-body" id="seq-body"></div>
       <div id="seq-error" class="error" style="display:none;"></div>
     </div>
   </div>
@@ -101,69 +102,273 @@
   <script>
     function getParam(name){ return new URL(location.href).searchParams.get(name); }
 
-    // --- helpers for PDBe visual API
+    // --- PDBe visual helpers
     function pdbeHighlight(viewer, asym, auth) {
       try { viewer.visual.highlight({ data: [{ struct_asym_id: asym, start_residue_number: auth, end_residue_number: auth }] }); } catch {}
     }
     function pdbeClearHighlight(viewer) {
       try { viewer.visual.clearHighlight(); } catch {}
     }
-    function pdbeSelect(viewer, asym, auth) {
-      try {
-        viewer.visual.clearSelection?.();
-        viewer.visual.select({ data: [{ struct_asym_id: asym, start_residue_number: auth, end_residue_number: auth }] });
-      } catch {}
+    function pdbeSelectRanges(viewer, ranges) {
+      // ranges: [{ asym, start, end }, ...]
+      try { viewer.visual.select({ data: ranges.map(r => ({
+        struct_asym_id: r.asym, start_residue_number: r.start, end_residue_number: r.end
+      }))}); } catch {}
+    }
+    function pdbeClearSelection(viewer) {
+      try { viewer.visual.clearSelection?.(); } catch {}
     }
 
-    // Build an interactive strip from a plain sequence string (fallback).
-    // We assume single chain "A" and 1-based residue numbering so clicks still drive the 3D if the auth_seq_id matches.
+    // ---- Drag-select controller (shared for FASTA + Model strips)
+    function enableDragSelect(container, chainsMeta, viewer) {
+      // chainsMeta: Map(asym -> { items: [{auth, el, asym}], elRow, lastAnchorIdx })
+      const selected = new Map(); // asym -> array of [start,end] inclusive, sorted & merged
+
+      function normalizeRange(a, b){ return [Math.min(a,b), Math.max(a,b)]; }
+
+      function addRange(asym, startIdx, endIdx) {
+        const meta = chainsMeta.get(asym);
+        if (!meta) return;
+        const [a,b] = normalizeRange(startIdx, endIdx);
+        const startAuth = meta.items[a].auth;
+        const endAuth   = meta.items[b].auth;
+
+        let arr = selected.get(asym) || [];
+        arr.push([startAuth, endAuth]);
+        // merge overlaps
+        arr.sort((x,y)=>x[0]-y[0]);
+        const merged = [];
+        for (const r of arr) {
+          if (!merged.length || r[0] > merged[merged.length-1][1] + 1) merged.push(r);
+          else merged[merged.length-1][1] = Math.max(merged[merged.length-1][1], r[1]);
+        }
+        selected.set(asym, merged);
+      }
+
+      function toggleSingle(asym, idx) {
+        const meta = chainsMeta.get(asym);
+        if (!meta) return;
+        const auth = meta.items[idx].auth;
+        let arr = selected.get(asym) || [];
+        // check if inside an existing range
+        let changed = false;
+        for (let i=0;i<arr.length;i++){
+          const [s,e] = arr[i];
+          if (auth >= s && auth <= e) {
+            // remove this single position from the range (split if needed)
+            arr.splice(i,1);
+            if (auth > s) arr.splice(i,0,[s,auth-1]);
+            if (auth < e) arr.splice(i,0,[auth+1,e]);
+            changed = true;
+            break;
+          }
+        }
+        if (!changed) arr.push([auth, auth]);
+        // re-merge for safety
+        arr.sort((x,y)=>x[0]-y[0]);
+        const merged = [];
+        for (const r of arr) {
+          if (!merged.length || r[0] > merged[merged.length-1][1] + 1) merged.push(r);
+          else merged[merged.length-1][1] = Math.max(merged[merged.length-1][1], r[1]);
+        }
+        selected.set(asym, merged);
+      }
+
+      function clearSelected() {
+        selected.clear();
+        chainsMeta.forEach(meta => meta.items.forEach(x => x.el.classList.remove('sel')));
+        pdbeClearSelection(viewer);
+      }
+
+      function paintSelected() {
+        chainsMeta.forEach((meta, asym) => {
+          // clear all
+          meta.items.forEach(x => x.el.classList.remove('sel'));
+          // paint ranges
+          const arr = selected.get(asym) || [];
+          if (!arr.length) return;
+          // for speed, make a map of auth->bool
+          const mark = new Set();
+          arr.forEach(([s,e]) => { for (let v=s; v<=e; v++) mark.add(v); });
+          meta.items.forEach(x => { if (mark.has(x.auth)) x.el.classList.add('sel'); });
+        });
+
+        // push to PDBe
+        const pdbeRanges = [];
+        selected.forEach((arr, asym) => {
+          arr.forEach(([s,e]) => pdbeRanges.push({ asym, start:s, end:e }));
+        });
+        if (pdbeRanges.length) pdbeSelectRanges(viewer, pdbeRanges);
+        else pdbeClearSelection(viewer);
+      }
+
+      // Per-chain drag handling
+      chainsMeta.forEach((meta, asym) => {
+        let dragging = false;
+        let anchorIdx = -1;
+        let lastIdx = -1;
+
+        function clearDragPaint(){
+          meta.items.forEach(x => x.el.classList.remove('drag'));
+        }
+        function paintDrag(a,b){
+          clearDragPaint();
+          const [s,e] = normalizeRange(a,b);
+          for (let i=s;i<=e;i++) meta.items[i].el.classList.add('drag');
+        }
+
+        // mouse handlers on residue spans
+        meta.items.forEach((x, idx) => {
+          const el = x.el;
+
+          el.addEventListener('mouseenter', () => {
+            pdbeHighlight(viewer, x.asym, x.auth);
+          });
+          el.addEventListener('mouseleave', () => {
+            pdbeClearHighlight(viewer);
+          });
+
+          el.addEventListener('mousedown', (ev) => {
+            ev.preventDefault();
+            dragging = true;
+            anchorIdx = idx;
+            lastIdx = idx;
+            meta.lastAnchorIdx = idx;
+            paintDrag(anchorIdx, idx);
+          });
+
+          el.addEventListener('mousemove', (ev) => {
+            if (!dragging) return;
+            if (lastIdx !== idx) {
+              lastIdx = idx;
+              paintDrag(anchorIdx, lastIdx);
+            }
+          });
+
+          el.addEventListener('mouseup', (ev) => {
+            if (!dragging) {
+              // simple click (no drag start caught here), treat separately
+              return;
+            }
+            dragging = false;
+            clearDragPaint();
+
+            const [sIdx, eIdx] = normalizeRange(anchorIdx, lastIdx);
+
+            if (ev.shiftKey && typeof meta.lastAnchorIdx === 'number') {
+              // extend from last anchor
+              const [sa,se] = normalizeRange(meta.lastAnchorIdx, idx);
+              addRange(asym, sa, se);
+            } else if (ev.metaKey || ev.ctrlKey) {
+              // additive toggle of range
+              addRange(asym, sIdx, eIdx);
+            } else {
+              // replace selection with this range
+              selected.clear();
+              addRange(asym, sIdx, eIdx);
+            }
+            paintSelected();
+          });
+
+          // Plain click without drag (mouseup might not fire on span if mouseup happens outside)
+          el.addEventListener('click', (ev) => {
+            // If a drag just happened, the 'mouseup' handler already processed it.
+            // To detect true click, ensure no dragging flags set:
+            if (dragging) return;
+
+            if (ev.metaKey || ev.ctrlKey) {
+              toggleSingle(asym, idx);
+            } else if (ev.shiftKey && typeof meta.lastAnchorIdx === 'number') {
+              const [sa,se] = normalizeRange(meta.lastAnchorIdx, idx);
+              selected.clear();
+              addRange(asym, sa, se);
+            } else {
+              selected.clear();
+              addRange(asym, idx, idx);
+              meta.lastAnchorIdx = idx;
+            }
+            paintSelected();
+          });
+        });
+
+        // Safety: cancel drag when leaving the row
+        meta.elRow.addEventListener('mouseleave', () => {
+          dragging = false;
+          clearDragPaint();
+        });
+      });
+
+      // Click in empty area clears selection
+      container.addEventListener('mousedown', (ev) => {
+        if (ev.target.closest('.seq-res')) return;
+        clearSelected();
+      });
+
+      return {
+        clear: clearSelected,
+        getSelectedRanges: () => {
+          const out = [];
+          selected.forEach((arr, asym) => arr.forEach(([s,e]) => out.push({ asym, start:s, end:e })));
+          return out;
+        }
+      };
+    }
+
+    // --- FASTA-based strip
     function buildStripFromFasta(seqText, viewer) {
       const seq = seqText.split(/\r?\n/).filter(l => !l.startsWith('>')).join('').trim();
+
       const container = document.createElement('div');
       container.className = 'seq-strip';
 
       const block = document.createElement('div');
       block.className = 'seq-chain';
+
       const header = document.createElement('h4');
       header.textContent = 'Chain A (FASTA)';
       block.appendChild(header);
 
+      const row = document.createElement('div');
+      row.className = 'seq-row';
+      block.appendChild(row);
+
+      const chainsMeta = new Map();
+      const items = [];
       for (let i = 0; i < seq.length; i++) {
+        const auth = i + 1;
+        const asym = 'A';
         const sp = document.createElement('span');
         sp.className = 'seq-res';
         sp.textContent = seq[i] || 'X';
-        const auth = i + 1;
-        const asym = 'A';
         sp.title = `${seq[i] || 'X'} ${auth}`;
         sp.dataset.asym = asym;
         sp.dataset.auth = String(auth);
-
-        sp.addEventListener('mouseenter', () => { pdbeHighlight(viewer, asym, auth); sp.classList.add('active'); });
-        sp.addEventListener('mouseleave', () => { pdbeClearHighlight(viewer); sp.classList.remove('active'); });
-        sp.addEventListener('click',      () => { pdbeSelect(viewer, asym, auth); sp.classList.add('active'); setTimeout(()=>sp.classList.remove('active'), 600); });
-
-        block.appendChild(sp);
+        row.appendChild(sp);
+        items.push({ auth, asym, el: sp });
       }
+      chainsMeta.set('A', { items, elRow: row, lastAnchorIdx: null });
 
       container.appendChild(block);
 
       const note = document.createElement('div');
       note.className = 'muted';
-      note.textContent = 'Showing FASTA-based sequence strip. It will auto-upgrade once the 3D model is ready.';
+      note.textContent = 'FASTA-based strip: click/drag to select. Will auto-upgrade when the 3D model is ready.';
       container.appendChild(note);
 
+      // enable drag/select
+      enableDragSelect(container, chainsMeta, viewer);
       return container;
     }
 
-    // Build interactive strip from Mol* model columns (best).
+    // --- Model-based strip
     function buildStripFromModel(model, viewer) {
       const { residues, chains } = model.atomicHierarchy || {};
       if (!residues || !chains) return null;
 
-      const label_comp_id = residues.label_comp_id;   // Column<string>
-      const auth_seq_id   = residues.auth_seq_id;     // Column<number>
-      const chainIndex    = residues.chainIndex;      // Int32Array
-      const label_asym_id = chains.label_asym_id;     // Column<string>
+      const label_comp_id = residues.label_comp_id;
+      const auth_seq_id   = residues.auth_seq_id;
+      const chainIndex    = residues.chainIndex;
+      const label_asym_id = chains.label_asym_id;
       if (!label_comp_id || !auth_seq_id || !chainIndex || !label_asym_id) return null;
 
       const to1 = (aa3) => {
@@ -171,23 +376,26 @@
         return m[aa3?.toUpperCase()] || 'X';
       };
 
-      const byChain = new Map(); // asym -> array of {one, three, auth, asym}
+      // Build per-chain lists
+      const chainsMeta = new Map(); // asym -> { items: [{auth, asym, el}], elRow, lastAnchorIdx }
       const nResidues = residues._rowCount | 0;
 
+      // First, allocate arrays per asym
+      const perChain = new Map();
       for (let rI = 0; rI < nResidues; rI++) {
         const cIdx  = chainIndex[rI];
         const asym  = label_asym_id.value(cIdx);
         const comp3 = label_comp_id.value(rI);
         const auth  = auth_seq_id.value(rI);
-        const one   = to1(comp3);
-        if (!byChain.has(asym)) byChain.set(asym, []);
-        byChain.get(asym).push({ one, three: comp3, auth, asym });
+        if (!perChain.has(asym)) perChain.set(asym, []);
+        perChain.get(asym).push({ one: to1(comp3), three: comp3, auth, asym });
       }
 
       const container = document.createElement('div');
       container.className = 'seq-strip';
 
-      byChain.forEach((list, asym) => {
+      // Render UI
+      perChain.forEach((list, asym) => {
         const block = document.createElement('div');
         block.className = 'seq-chain';
 
@@ -195,6 +403,11 @@
         header.textContent = `Chain ${asym}`;
         block.appendChild(header);
 
+        const row = document.createElement('div');
+        row.className = 'seq-row';
+        block.appendChild(row);
+
+        const items = [];
         list.forEach(res => {
           const sp = document.createElement('span');
           sp.className = 'seq-res';
@@ -202,21 +415,19 @@
           sp.title = `${res.three} ${res.auth}`;
           sp.dataset.asym = res.asym;
           sp.dataset.auth = String(res.auth);
-
-          sp.addEventListener('mouseenter', () => { pdbeHighlight(viewer, res.asym, res.auth); sp.classList.add('active'); });
-          sp.addEventListener('mouseleave', () => { pdbeClearHighlight(viewer); sp.classList.remove('active'); });
-          sp.addEventListener('click',      () => { pdbeSelect(viewer,   res.asym, res.auth); sp.classList.add('active'); setTimeout(()=>sp.classList.remove('active'), 600); });
-
-          block.appendChild(sp);
+          row.appendChild(sp);
+          items.push({ auth: res.auth, asym: res.asym, el: sp });
         });
 
+        chainsMeta.set(asym, { items, elRow: row, lastAnchorIdx: null });
         container.appendChild(block);
       });
 
+      enableDragSelect(container, chainsMeta, viewer);
       return container;
     }
 
-    // Wait for Mol* structure to be present
+    // Wait for Mol* structure
     async function waitForModel(viewer, timeoutMs=12000) {
       const start = performance.now();
       const plugin = viewer?.viewerInstance?.plugin;
@@ -265,7 +476,7 @@
       cifLink.href   = cifUrl;
       fastaLink.href = fastaUrl;
 
-      // Load FASTA and render a clickable fallback strip immediately
+      // Load FASTA (to build immediate interactive fallback)
       let fastaText = '';
       try {
         fastaText = await fetch(fastaUrl).then(r=>r.text());
@@ -316,7 +527,7 @@
       hideChrome(); setTimeout(hideChrome, 100); setTimeout(hideChrome, 500);
       new MutationObserver(hideChrome).observe(root, { childList:true, subtree:true });
 
-      // Style scene a bit
+      // Soft lighting + outline
       function styleScene() {
         try {
           const plugin = pdbe?.viewerInstance?.plugin;
@@ -332,19 +543,18 @@
       setTimeout(styleScene, 400);
       setTimeout(styleScene, 1200);
 
-      // 1) Show FASTA-based clickable strip right away
+      // 1) FASTA interactive fallback immediately
       if (fastaText) {
         seqBody.innerHTML = '';
         seqBody.appendChild(buildStripFromFasta(fastaText, pdbe));
       } else {
-        // If no FASTA, at least show a minimal placeholder
         const p = document.createElement('div');
         p.className = 'muted';
         p.textContent = 'Waiting for structure…';
         seqBody.innerHTML = ''; seqBody.appendChild(p);
       }
 
-      // 2) Upgrade to structure-derived strip once model is ready
+      // 2) Upgrade to model-based interactive strip
       const model = await waitForModel(pdbe, 12000);
       if (model) {
         const strip = buildStripFromModel(model, pdbe);
